@@ -121,8 +121,7 @@ public abstract class BaseIntegrationTest {
      */
     WireMock.stubFor(
         WireMock.post(
-                WireMock.urlMatching(
-                    String.format("/realms/%s/protocol/openid-connect/token", realm)))
+                WireMock.urlMatching("/realms/%s/protocol/openid-connect/token".formatted(realm)))
             .withRequestBody(
                 WireMock.containing("grant_type=urn:ietf:params:oauth:grant-type:uma-ticket"))
             .willReturn(
