@@ -35,8 +35,7 @@ public class RoleBaseAccessIntegrationTest extends BaseIntegrationTest {
 
     WireMock.stubFor(
         WireMock.post(
-                WireMock.urlMatching(
-                    String.format("/realms/%s/protocol/openid-connect/token", realm)))
+                WireMock.urlMatching("/realms/%s/protocol/openid-connect/token".formatted(realm)))
             .withRequestBody(
                 WireMock.containing("grant_type=urn:ietf:params:oauth:grant-type:uma-ticket"))
             .willReturn(
@@ -59,8 +58,7 @@ public class RoleBaseAccessIntegrationTest extends BaseIntegrationTest {
 
     WireMock.stubFor(
         WireMock.post(
-                WireMock.urlMatching(
-                    String.format("/realms/%s/protocol/openid-connect/token", realm)))
+                WireMock.urlMatching("/realms/%s/protocol/openid-connect/token".formatted(realm)))
             .withRequestBody(
                 WireMock.containing("grant_type=urn:ietf:params:oauth:grant-type:uma-ticket"))
             .willReturn(
@@ -83,8 +81,7 @@ public class RoleBaseAccessIntegrationTest extends BaseIntegrationTest {
 
     WireMock.stubFor(
         WireMock.post(
-                WireMock.urlMatching(
-                    String.format("/realms/%s/protocol/openid-connect/token", realm)))
+                WireMock.urlMatching("/realms/%s/protocol/openid-connect/token".formatted(realm)))
             .withRequestBody(
                 WireMock.containing("grant_type=urn:ietf:params:oauth:grant-type:uma-ticket"))
             .willReturn(
